# SimpleAudioPlayer

./: AudioData.cpp  AudioData.hpp  CMakeLists.txt  Gui.cpp  Gui.hpp  MultimediaObj.cpp  MultimediaObj.hpp  Player.cpp  Player.hpp  README.md  main.cpp  sdl_header.h
